tests/test_compile/cases/internal_variables.stderr
error: Unexpected meta-item format `attribute cannot contain `__deku_` these are internal variables. Please use the `deku::` instead.`
  --> tests/test_compile/cases/internal_variables.rs:91:19
   |
91 |     #[deku(cond = "__deku_bit_offset == *field_a as usize")]
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
